[gd_scene load_steps=17 format=3 uid="uid://crasww6ekat41"]

[ext_resource type="Script" uid="uid://b4f52l5i0p3sp" path="res://script/player.gd" id="1_hjaqi"]
[ext_resource type="Texture2D" uid="uid://doklm2oqwk81s" path="res://icon.svg" id="1_xo3ru"]
[ext_resource type="AudioStream" uid="uid://b8qe5o8mh5l1g" path="res://asset/audio/jump_a.sfxr" id="3_fvtld"]
[ext_resource type="AudioStream" uid="uid://c0uyjou2m8h7r" path="res://asset/audio/land_a.sfxr" id="4_ct4mp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hjaqi"]
radius = 20.0
height = 64.0

[sub_resource type="Animation" id="Animation_fvtld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Icon:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -64)]
}

[sub_resource type="Animation" id="Animation_hjaqi"]
resource_name = "crouch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 32), Vector2(0, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.7, 0.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Icon:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -64)]
}

[sub_resource type="Animation" id="Animation_ct4mp"]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.8, 0.2), Vector2(0.2, 0.8), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_s4jxa"]
resource_name = "land"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.7, 0.3), Vector2(0.45, 0.55), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_oh5ij"]
resource_name = "walk"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.55, 0.45), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ct4mp"]
_data = {
&"RESET": SubResource("Animation_fvtld"),
&"crouch": SubResource("Animation_hjaqi"),
&"jump": SubResource("Animation_ct4mp"),
&"land": SubResource("Animation_s4jxa"),
&"walk": SubResource("Animation_oh5ij")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ct4mp"]
random_pitch = 1.1
random_volume_offset_db = 0.4
streams_count = 1
stream_0/stream = ExtResource("3_fvtld")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_s4jxa"]
random_pitch = 1.05
random_volume_offset_db = 2.0
streams_count = 1
stream_0/stream = ExtResource("4_ct4mp")

[sub_resource type="Curve" id="Curve_ct4mp"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.36313, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_s4jxa"]
curve = SubResource("Curve_ct4mp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oh5ij"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(48, 1, 1)
direction = Vector3(0, -1, 0)
spread = 90.0
initial_velocity_min = 80.0
initial_velocity_max = 80.0
gravity = Vector3(0, 98, 0)
scale_min = 2.0
scale_max = 6.0
alpha_curve = SubResource("CurveTexture_s4jxa")

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_hjaqi")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_xo3ru")
offset = Vector2(0, -64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hjaqi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ct4mp")
}

[node name="CrouchTimer" type="Timer" parent="."]

[node name="AudioJump" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ct4mp")

[node name="AudioLand" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_s4jxa")

[node name="DustParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 32)
emitting = false
lifetime = 0.25
one_shot = true
explosiveness = 0.9
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_oh5ij")
